--- a/app/views/games/_roundplaylong.html.erb
+++ b/app/views/games/_roundplaylong.html.erb
@@ -32,44 +32,44 @@
       <% end %>
       <div class="playlongroundbutton">
         <% if @gamedata.r6answer %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton" %>
+          <%= button_tag "Round 7", :class => "r7playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton hidden" %>
+          <%= button_tag "Round 7", :class => "r7playbutton hidden" %>
         <% end %>
         <% if @gamedata.r7answer %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton" %>
+          <%= button_tag "Round 8", :class => "r8playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton hidden" %>
+          <%= button_tag "Round 8", :class => "r8playbutton hidden" %>
         <% end %>
         <div>
           <% if @gamedata.r3answer %>
-            <%= button_tag "Rnd 4", :class => "r4playbutton" %>
+            <%= button_tag "Round 4", :class => "r4playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 4", :class => "r4playbutton hidden" %>
+            <%= button_tag "Round 4", :class => "r4playbutton hidden" %>
           <% end %>
           <% if @gamedata.r4answer %>
-            <%= button_tag "Rnd 5", :class => "r5playbutton" %>
+            <%= button_tag "Round 5", :class => "r5playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 5", :class => "r5playbutton hidden" %>
+            <%= button_tag "Round 5", :class => "r5playbutton hidden" %>
           <% end %>
           <% if @gamedata.r5answer %>
-            <%= button_tag "Rnd 6", :class => "r6playbutton" %>
+            <%= button_tag "Round 6", :class => "r6playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 6", :class => "r6playbutton hidden" %>
+            <%= button_tag "Round 6", :class => "r6playbutton hidden" %>
           <% end %>
         </div>
         <div>
           <% if @gamedata.r1answer %>
-            <%= button_tag "Rnd 1", :class => "r1playbutton" %>
-            <%= button_tag "Rnd 2", :class => "r2playbutton" %>
+            <%= button_tag "Round 1", :class => "r1playbutton" %>
+            <%= button_tag "Round 2", :class => "r2playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 1", :class => "r1playbutton hidden" %>
-            <%= button_tag "Rnd 2", :class => "r2playbutton hidden" %>
+            <%= button_tag "Round 1", :class => "r1playbutton hidden" %>
+            <%= button_tag "Round 2", :class => "r2playbutton hidden" %>
           <% end %>
           <% if @gamedata.r2answer %>
-            <%= button_tag "Rnd 3", :class => "r3playbutton" %>
+            <%= button_tag "Round 3", :class => "r3playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 3", :class => "r3playbutton hidden" %>
+            <%= button_tag "Round 3", :class => "r3playbutton hidden" %>
           <% end %>
         </div>
 
@@ -110,39 +110,39 @@
       <% end %>
       <div class="playlongroundbutton">
         <% if @gamedata.r6answer %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton" %>
+          <%= button_tag "Round 7", :class => "r7playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton hidden" %>
+          <%= button_tag "Round 7", :class => "r7playbutton hidden" %>
         <% end %>
         <% if @gamedata.r7answer %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton" %>
+          <%= button_tag "Round 8", :class => "r8playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton hidden" %>
+          <%= button_tag "Round 8", :class => "r8playbutton hidden" %>
         <% end %>
         <div>
           <% if @gamedata.r3answer %>
-            <%= button_tag "Rnd 4", :class => "r4playbutton" %>
+            <%= button_tag "Round 4", :class => "r4playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 4", :class => "r4playbutton hidden" %>
+            <%= button_tag "Round 4", :class => "r4playbutton hidden" %>
           <% end %>
           <% if @gamedata.r4answer %>
-            <%= button_tag "Rnd 5", :class => "r5playbutton" %>
+            <%= button_tag "Round 5", :class => "r5playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 5", :class => "r5playbutton hidden" %>
+            <%= button_tag "Round 5", :class => "r5playbutton hidden" %>
           <% end %>
           <% if @gamedata.r5answer %>
-            <%= button_tag "Rnd 6", :class => "r6playbutton" %>
+            <%= button_tag "Round 6", :class => "r6playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 6", :class => "r6playbutton hidden" %>
+            <%= button_tag "Round 6", :class => "r6playbutton hidden" %>
           <% end %>
         </div>
         <div>
-          <%= button_tag "Rnd 1", :class => "r1playbutton" %>
-          <%= button_tag "Rnd 2", :class => "r2playbutton" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %>
           <% if @gamedata.r2answer %>
-            <%= button_tag "Rnd 3", :class => "r3playbutton" %>
+            <%= button_tag "Round 3", :class => "r3playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 3", :class => "r3playbutton hidden" %>
+            <%= button_tag "Round 3", :class => "r3playbutton hidden" %>
           <% end %>
         </div>
       </div>
@@ -181,36 +181,36 @@
       <% end %>
       <div class="playlongroundbutton">
         <% if @gamedata.r6answer %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton" %>
+          <%= button_tag "Round 7", :class => "r7playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton hidden" %>
+          <%= button_tag "Round 7", :class => "r7playbutton hidden" %>
         <% end %>
         <% if @gamedata.r7answer %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton" %>
+          <%= button_tag "Round 8", :class => "r8playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton hidden" %>
+          <%= button_tag "Round 8", :class => "r8playbutton hidden" %>
         <% end %>
         <div>
           <% if @gamedata.r3answer %>
-            <%= button_tag "Rnd 4", :class => "r4playbutton" %>
+            <%= button_tag "Round 4", :class => "r4playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 4", :class => "r4playbutton hidden" %>
+            <%= button_tag "Round 4", :class => "r4playbutton hidden" %>
           <% end %>
           <% if @gamedata.r4answer %>
-            <%= button_tag "Rnd 5", :class => "r5playbutton" %>
+            <%= button_tag "Round 5", :class => "r5playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 5", :class => "r5playbutton hidden" %>
+            <%= button_tag "Round 5", :class => "r5playbutton hidden" %>
           <% end %>
           <% if @gamedata.r5answer %>
-            <%= button_tag "Rnd 6", :class => "r6playbutton" %>
+            <%= button_tag "Round 6", :class => "r6playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 6", :class => "r6playbutton hidden" %>
+            <%= button_tag "Round 6", :class => "r6playbutton hidden" %>
           <% end %>
         </div>
         <div>
-          <%= button_tag "Rnd 1", :class => "r1playbutton" %>
-          <%= button_tag "Rnd 2", :class => "r2playbutton" %>
-          <%= button_tag "Rnd 3", :class => "r3playbutton" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %>
+          <%= button_tag "Round 3", :class => "r3playbutton" %>
         </div>
 
 
@@ -250,32 +250,32 @@
       <% end %>
       <div class="playlongroundbutton">
         <% if @gamedata.r6answer %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton" %>
+          <%= button_tag "Round 7", :class => "r7playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton hidden" %>
+          <%= button_tag "Round 7", :class => "r7playbutton hidden" %>
         <% end %>
         <% if @gamedata.r7answer %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton" %>
+          <%= button_tag "Round 8", :class => "r8playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton hidden" %>
+          <%= button_tag "Round 8", :class => "r8playbutton hidden" %>
         <% end %>
         <div>
-          <%= button_tag "Rnd 4", :class => "r4playbutton" %>
+          <%= button_tag "Round 4", :class => "r4playbutton" %>
           <% if @gamedata.r4answer %>
-            <%= button_tag "Rnd 5", :class => "r5playbutton" %>
+            <%= button_tag "Round 5", :class => "r5playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 5", :class => "r5playbutton hidden" %>
+            <%= button_tag "Round 5", :class => "r5playbutton hidden" %>
           <% end %>
           <% if @gamedata.r5answer %>
-            <%= button_tag "Rnd 6", :class => "r6playbutton" %>
+            <%= button_tag "Round 6", :class => "r6playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 6", :class => "r6playbutton hidden" %>
+            <%= button_tag "Round 6", :class => "r6playbutton hidden" %>
           <% end %>
         </div>
         <div>
-          <%= button_tag "Rnd 1", :class => "r1playbutton" %>
-          <%= button_tag "Rnd 2", :class => "r2playbutton" %>
-          <%= button_tag "Rnd 3", :class => "r3playbutton" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %>
+          <%= button_tag "Round 3", :class => "r3playbutton" %>
         </div>
       </div>
     </div>
@@ -313,28 +313,28 @@
       <% end %>
       <div class="playlongroundbutton">
         <% if @gamedata.r6answer %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton" %>
+          <%= button_tag "Round 7", :class => "r7playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton hidden" %>
+          <%= button_tag "Round 7", :class => "r7playbutton hidden" %>
         <% end %>
         <% if @gamedata.r7answer %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton" %>
+          <%= button_tag "Round 8", :class => "r8playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton hidden" %>
+          <%= button_tag "Round 8", :class => "r8playbutton hidden" %>
         <% end %>
         <div>
-          <%= button_tag "Rnd 4", :class => "r4playbutton" %>
-          <%= button_tag "Rnd 5", :class => "r5playbutton" %>
+          <%= button_tag "Round 4", :class => "r4playbutton" %>
+          <%= button_tag "Round 5", :class => "r5playbutton" %>
           <% if @gamedata.r5answer %>
-            <%= button_tag "Rnd 6", :class => "r6playbutton" %>
+            <%= button_tag "Round 6", :class => "r6playbutton" %>
           <% else %>
-            <%= button_tag "Rnd 6", :class => "r6playbutton hidden" %>
+            <%= button_tag "Round 6", :class => "r6playbutton hidden" %>
           <% end %>
         </div>
         <div>
-          <%= button_tag "Rnd 1", :class => "r1playbutton" %>
-          <%= button_tag "Rnd 2", :class => "r2playbutton" %>
-          <%= button_tag "Rnd 3", :class => "r3playbutton" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %>
+          <%= button_tag "Round 3", :class => "r3playbutton" %>
         </div>
       </div>
     </div>
@@ -372,24 +372,24 @@
       <% end %>
       <div class="playlongroundbutton">
         <% if @gamedata.r6answer %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton" %>
+          <%= button_tag "Round 7", :class => "r7playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 7", :class => "r7playbutton hidden" %>
+          <%= button_tag "Round 7", :class => "r7playbutton hidden" %>
         <% end %>
         <% if @gamedata.r7answer %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton" %>
+          <%= button_tag "Round 8", :class => "r8playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton hidden" %>
+          <%= button_tag "Round 8", :class => "r8playbutton hidden" %>
         <% end %>
         <div>
-          <%= button_tag "Rnd 4", :class => "r4playbutton" %>
-          <%= button_tag "Rnd 5", :class => "r5playbutton" %>
-          <%= button_tag "Rnd 6", :class => "r6playbutton" %>
+          <%= button_tag "Round 4", :class => "r4playbutton" %>
+          <%= button_tag "Round 5", :class => "r5playbutton" %>
+          <%= button_tag "Round 6", :class => "r6playbutton" %>
         </div>
         <div>
-          <%= button_tag "Rnd 1", :class => "r1playbutton" %>
-          <%= button_tag "Rnd 2", :class => "r2playbutton" %>
-          <%= button_tag "Rnd 3", :class => "r3playbutton" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %>
+          <%= button_tag "Round 3", :class => "r3playbutton" %>
         </div>
       </div>
     </div>
@@ -426,21 +426,21 @@
         </div>
       <% end %>
       <div class="playlongroundbutton">
-        <%= button_tag "Rnd 7", :class => "r7playbutton" %>
+        <%= button_tag "Round 7", :class => "r7playbutton" %>
         <% if @gamedata.r7answer %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton" %>
+          <%= button_tag "Round 8", :class => "r8playbutton" %>
         <% else %>
-          <%= button_tag "Rnd 8", :class => "r8playbutton hidden" %>
+          <%= button_tag "Round 8", :class => "r8playbutton hidden" %>
         <% end %>
         <div>
-          <%= button_tag "Rnd 4", :class => "r4playbutton" %>
-          <%= button_tag "Rnd 5", :class => "r5playbutton" %>
-          <%= button_tag "Rnd 6", :class => "r6playbutton" %>
+          <%= button_tag "Round 4", :class => "r4playbutton" %>
+          <%= button_tag "Round 5", :class => "r5playbutton" %>
+          <%= button_tag "Round 6", :class => "r6playbutton" %>
         </div>
         <div>
-          <%= button_tag "Rnd 1", :class => "r1playbutton" %>
-          <%= button_tag "Rnd 2", :class => "r2playbutton" %>
-          <%= button_tag "Rnd 3", :class => "r3playbutton" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %>
+          <%= button_tag "Round 3", :class => "r3playbutton" %>
         </div>
       </div>
     </div>
@@ -477,17 +477,17 @@
         </div>
       <% end %>
       <div class="playlongroundbutton">
-        <%= button_tag "Rnd 7", :class => "r7playbutton" %>
-        <%= button_tag "Rnd 8", :class => "r8playbutton" %>
+        <%= button_tag "Round 7", :class => "r7playbutton" %>
+        <%= button_tag "Round 8", :class => "r8playbutton" %>
         <div>
-          <%= button_tag "Rnd 4", :class => "r4playbutton" %>
-          <%= button_tag "Rnd 5", :class => "r5playbutton" %>
-          <%= button_tag "Rnd 6", :class => "r6playbutton" %>
+          <%= button_tag "Round 4", :class => "r4playbutton" %>
+          <%= button_tag "Round 5", :class => "r5playbutton" %>
+          <%= button_tag "Round 6", :class => "r6playbutton" %>
         </div>
         <div>
-          <%= button_tag "Rnd 1", :class => "r1playbutton" %>
-          <%= button_tag "Rnd 2", :class => "r2playbutton" %>
-          <%= button_tag "Rnd 3", :class => "r3playbutton" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %>
+          <%= button_tag "Round 3", :class => "r3playbutton" %>
         </div>
       </div>
     </div>
