--- a/app/views/games/_roundplayshort.html.erb
+++ b/app/views/games/_roundplayshort.html.erb
@@ -32,22 +32,22 @@
       <% end %>
       <div class="playroundbutton">
         <% if @gamedata.r1answer && @gamedata.r2answer %>
-          <%= button_tag "Play Round 3", :class => "r3playbutton" %>
+          <%= button_tag "Round 3", :class => "r3playbutton" %>
         <% else %>
-          <%= button_tag "Play Round 3", :class => "r3playbutton hidden" %>
+          <%= button_tag "Round 3", :class => "r3playbutton hidden" %>
         <% end %>
         <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer %>
-          <%= button_tag "Play Round 4", :class => "r4playbutton" %>
+          <%= button_tag "Round 4", :class => "r4playbutton" %>
         <% else %>
-          <%= button_tag "Play Round 4", :class => "r4playbutton hidden" %>
+          <%= button_tag "Round 4", :class => "r4playbutton hidden" %>
         <% end %>
         <div>
           <% if @gamedata.r1answer %>
-            <%= button_tag "Play Round 1", :class => "r1playbutton" %>
-            <%= button_tag "Play Round 2", :class => "r2playbutton" %><br>
+            <%= button_tag "Round 1", :class => "r1playbutton" %>
+            <%= button_tag "Round 2", :class => "r2playbutton" %><br>
           <% else %>
-            <%= button_tag "Play Round 1", :class => "r1playbutton hidden" %>
-            <%= button_tag "Play Round 2", :class => "r2playbutton hidden" %><br>
+            <%= button_tag "Round 1", :class => "r1playbutton hidden" %>
+            <%= button_tag "Round 2", :class => "r2playbutton hidden" %><br>
           <% end %>
         </div>
       </div>
@@ -85,18 +85,18 @@
       <% end %>
       <div class="playroundbutton">
         <% if @gamedata.r2answer %>
-          <%= button_tag "Play Round 3", :class => "r3playbutton" %>
+          <%= button_tag "Round 3", :class => "r3playbutton" %>
         <% else %>
-          <%= button_tag "Play Round 3", :class => "r3playbutton hidden" %>
+          <%= button_tag "Round 3", :class => "r3playbutton hidden" %>
         <% end %>
         <% if @gamedata.r3answer %>
-          <%= button_tag "Play Round 4", :class => "r4playbutton" %>
+          <%= button_tag "Round 4", :class => "r4playbutton" %>
         <% else %>
-          <%= button_tag "Play Round 4", :class => "r4playbutton hidden" %>
+          <%= button_tag "Round 4", :class => "r4playbutton hidden" %>
         <% end %>
         <div>
-          <%= button_tag "Play Round 1", :class => "r1playbutton" %>
-          <%= button_tag "Play Round 2", :class => "r2playbutton" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %>
         </div>
       </div>
     </div>
@@ -132,15 +132,15 @@
         </div>
       <% end %>
       <div class="playroundbutton">
-        <%= button_tag "Play Round 3", :class => "r3playbutton" %>
+        <%= button_tag "Round 3", :class => "r3playbutton" %>
         <% if @gamedata.r3answer %>
-          <%= button_tag "Play Round 4", :class => "r4playbutton" %>
+          <%= button_tag "Round 4", :class => "r4playbutton" %>
         <% else %>
-          <%= button_tag "Play Round 4", :class => "r4playbutton hidden" %>
+          <%= button_tag "Round 4", :class => "r4playbutton hidden" %>
         <% end %>
         <div>
-          <%= button_tag "Play Round 1", :class => "r1playbutton" %>
-          <%= button_tag "Play Round 2", :class => "r2playbutton" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %>
         </div>
       </div>
     </div>
@@ -176,11 +176,11 @@
         </div>
       <% end %>
       <div class="playroundbutton">
-        <%= button_tag "Play Round 3", :class => "r3playbutton" %>
-        <%= button_tag "Play Round 4", :class => "r4playbutton" %>
+        <%= button_tag "Round 3", :class => "r3playbutton" %>
+        <%= button_tag "Round 4", :class => "r4playbutton" %>
         <div>
-          <%= button_tag "Play Round 1", :class => "r1playbutton" %>
-          <%= button_tag "Play Round 2", :class => "r2playbutton" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %>
         </div>
       </div>
     </div>
