--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -226,6 +226,10 @@
     width: 340px;
     margin: 0 auto;
   }
+  .smallerbutton {
+    font-size: 75%;
+    padding: 8px;
+  }
   .roundtitle {
     text-decoration: underline;
     font-size: 190%;
