--- a/app/assets/javascripts/page/playgame.js.erb
+++ b/app/assets/javascripts/page/playgame.js.erb
@@ -13,14 +13,14 @@ function refreshTimeRemaining() {
 }
 
 function removeButtonAnims() {
-  $(".r1playbutton").removeClass("animated flip");
-  $(".r2playbutton").removeClass("animated flip");
-  $(".r3playbutton").removeClass("animated flip");
-  $(".r4playbutton").removeClass("animated flip");
-  $(".r5playbutton").removeClass("animated flip");
-  $(".r6playbutton").removeClass("animated flip");
-  $(".r7playbutton").removeClass("animated flip");
-  $(".r8playbutton").removeClass("animated flip");
+  $(".r1playbutton").removeClass("animated flip smallerbutton");
+  $(".r2playbutton").removeClass("animated flip smallerbutton");
+  $(".r3playbutton").removeClass("animated flip smallerbutton");
+  $(".r4playbutton").removeClass("animated flip smallerbutton");
+  $(".r5playbutton").removeClass("animated flip smallerbutton");
+  $(".r6playbutton").removeClass("animated flip smallerbutton");
+  $(".r7playbutton").removeClass("animated flip smallerbutton");
+  $(".r8playbutton").removeClass("animated flip smallerbutton");
   $(".allanswered").removeClass("animated bounce");
   $(".r2playbutton").text("Round 2");
   $(".r3playbutton").text("Round 3");
@@ -29,14 +29,6 @@ function removeButtonAnims() {
   $(".r6playbutton").text("Round 6");
   $(".r7playbutton").text("Round 7");
   $(".r8playbutton").text("Round 8");
-  $(".r1playbutton").removeClass("smallerbutton", 600, "easeInBack" );
-  $(".r2playbutton").removeClass("smallerbutton", 600, "easeInBack" );
-  $(".r3playbutton").removeClass("smallerbutton", 600, "easeInBack" );
-  $(".r4playbutton").removeClass("smallerbutton", 600, "easeInBack" );
-  $(".r5playbutton").removeClass("smallerbutton", 600, "easeInBack" );
-  $(".r6playbutton").removeClass("smallerbutton", 600, "easeInBack" );
-  $(".r7playbutton").removeClass("smallerbutton", 600, "easeInBack" );
-  $(".r8playbutton").removeClass("smallerbutton", 600, "easeInBack" );
 }
 
 $(".r1playbutton").click(function () {
