--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -66,6 +66,11 @@
     box-shadow: 0 5px 5px #444;
     margin-bottom: 12px;
   }
+  #main-pagetitle {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+  }
   #main-titletext {
     text-align: center;
     color: white;
@@ -78,6 +83,7 @@
     float:left;
     margin-top: 2px;
     margin-left: 8px;
+    margin-right: -8px;
   }
   #main-messagebutton {
     float: right;
@@ -223,7 +229,6 @@
     margin: 0 auto;
   }
   .playlongroundbutton {
-    width: 340px;
     margin: 0 auto;
   }
   .smallerbutton {
