--- a/app/views/games/_roundplaylong.html.erb
+++ b/app/views/games/_roundplaylong.html.erb
@@ -491,7 +491,6 @@
         </div>
       </div>
     </div>
-
-    Time left to play: <%= @timeremaining %>.<br>
+    <span class="timeremaining">Time left to play: <%= @timeremaining %>.</span><br>
     # of players: <%= @game.playercount %>/12
   </div>
