--- a/app/views/games/_roundplayshort.html.erb
+++ b/app/views/games/_roundplayshort.html.erb
@@ -184,6 +184,6 @@
         </div>
       </div>
     </div>
-    <span class="timeremaining">Time left to play: <%= @timeremaining %>.<br></span>
+    <span class="timeremaining">Time left to play: <%= @timeremaining %>.</span><br>
     # of players: <%= @game.playercount %>/12
   </div>
