--- a/app/views/games/_roundplaylong.html.erb
+++ b/app/views/games/_roundplaylong.html.erb
@@ -23,11 +23,11 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playlongroundbutton">
@@ -101,11 +101,11 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playlongroundbutton">
@@ -172,11 +172,11 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playlongroundbutton">
@@ -241,11 +241,11 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playlongroundbutton">
@@ -304,11 +304,11 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playlongroundbutton">
@@ -363,11 +363,11 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playlongroundbutton">
@@ -418,11 +418,11 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playlongroundbutton">
@@ -469,11 +469,11 @@
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playlongroundbutton">
