--- a/app/views/games/_roundplayshort.html.erb
+++ b/app/views/games/_roundplayshort.html.erb
@@ -23,11 +23,11 @@
       </div>
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playroundbutton">
@@ -76,11 +76,11 @@
       </div>
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playroundbutton">
@@ -124,11 +124,11 @@
       </div>
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playroundbutton">
@@ -168,11 +168,11 @@
       </div>
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
         <div class="allanswered">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% else %>
         <div class="allanswered hidden">
-          You've completed every acro! Come back in <%= @timeremaining %> to vote!
+          You've completed every acro! Come back soon to vote!
         </div>
       <% end %>
       <div class="playroundbutton">
